@@ -1,7 +1,7 @@
       logical function pre_mksgm(lfnout,ffield,
      + lfnfrg,filfrg,lfnsgm,filsgm)
 c
-c $Id: pre_mksgm.F,v 1.7 1998-06-08 23:29:34 d3j191 Exp $
+c $Id: pre_mksgm.F,v 1.8 1998-08-18 16:45:47 d3j191 Exp $
 c
 c     function to make segment file
 c
@@ -63,39 +63,39 @@ c                  4       :
 c                  5       :
 c
       if(.not.ma_push_get(mt_int,5*matm,"latm",l_latm,i_latm))
-     + call errquit('Memory allocation failed for latm',9999)
+     + call errquit('mksgm: Memory allocation failed for latm',9999)
 c
 c     char*6  catm(1,matm) : atom name
 c                  2       : atom type
 c
       if(.not.ma_push_get(mt_byte,12*matm,"catm",l_catm,i_catm))
-     + call errquit('Memory allocation failed for catm',9999)
+     + call errquit('mksgm: Memory allocation failed for catm',9999)
 c
 c     real*8 qatm(1,matm) : partial atomic charges
 c                 2       : polarizabilities
 c
       if(.not.ma_push_get(mt_dbl,2*matm,"qatm",l_qatm,i_qatm))
-     + call errquit('Memory allocation failed for qatm',9999)
+     + call errquit('mksgm: Memory allocation failed for qatm',9999)
 c
 c     integer lbnd(1:2,mbnd) : bond indices
 c
       if(.not.ma_push_get(mt_int,2*mbnd,"bnd",l_bnd,i_bnd))
-     + call errquit('Memory allocation failed for bnd',9999)
+     + call errquit('mksgm: Memory allocation failed for bnd',9999)
 c
 c     integer lang(1:3,mang) : angle indices
 c
       if(.not.ma_push_get(mt_int,3*mang,"ang",l_ang,i_ang))
-     + call errquit('Memory allocation failed for ang',9999)
+     + call errquit('mksgm: Memory allocation failed for ang',9999)
 c
 c     integer ldih(1:4,mdih) : torsion indices
 c
       if(.not.ma_push_get(mt_int,4*mdih,"dih",l_dih,i_dih))
-     + call errquit('Memory allocation failed for dih',9999)
+     + call errquit('mksgm: Memory allocation failed for dih',9999)
 c
 c     integer limp(1:4,mimp) : improper torsion indices
 c
       if(.not.ma_push_get(mt_int,4*mimp,"imp",l_imp,i_imp))
-     + call errquit('Memory allocation failed for imp',9999)
+     + call errquit('mksgm: Memory allocation failed for imp',9999)
 c
 c     read atom list and bond list from fragment file
 c     -----------------------------------------------
@@ -103,33 +103,33 @@ c
       if(.not.pre_frgrd(lfnfrg,filfrg,lfnout,
      + int_mb(i_latm),byte_mb(i_catm),dbl_mb(i_qatm),matm,natm,
      + int_mb(i_bnd),mbnd,nbnd))
-     + call errquit('pre_frgrd failed',9999)
+     + call errquit('mksgm: pre_frgrd failed',9999)
 c
 c     make the angle list
 c     -------------------
 c
       if(.not.pre_ang(int_mb(i_bnd),mbnd,nbnd,int_mb(i_ang),mang,nang))
-     + call errquit('pre_ang failed',9999)
+     + call errquit('mksgm: pre_ang failed',9999)
 c
 c     make the dihedral list
 c     ----------------------
 c
       if(.not.pre_dih(int_mb(i_ang),mang,nang,int_mb(i_dih),mdih,ndih))
-     + call errquit('pre_dih failed',9999)
+     + call errquit('mksgm: pre_dih failed',9999)
 c
 c     make the improper list
 c     ----------------------
 c
       if(.not.pre_imp(ffield,int_mb(i_latm),matm,natm,
      + int_mb(i_bnd),mbnd,nbnd,int_mb(i_imp),mimp,nimp))
-     + call errquit('pre_imp failed',9999)
+     + call errquit('mksgm: pre_imp failed',9999)
 c
 c     select dihedrals
 c     ----------------
 c
       if(.not.pre_dihsel(ffield,int_mb(i_catm),matm,natm,
      + int_mb(i_dih),mdih,ndih))
-     + call errquit('pre_dihsel failed',9999)
+     + call errquit('mksgm: pre_dihsel failed',9999)
 c
 c     switch propers to impropers
 c     ---------------------------
@@ -137,7 +137,7 @@ c
       if(.not.pre_dihimp(ffield,int_mb(i_latm),matm,natm,
      + int_mb(i_ang),mang,nang,
      + int_mb(i_dih),mdih,ndih,int_mb(i_imp),mimp,nimp))
-     + call errquit('pre_dihsel failed',9999)
+     + call errquit('mksgm: pre_dihsel failed',9999)
 c
 c     write segment file
 c     ------------------
@@ -146,25 +146,25 @@ c
      + int_mb(i_latm),byte_mb(i_catm),dbl_mb(i_qatm),matm,natm,
      + int_mb(i_bnd),mbnd,nbnd,int_mb(i_ang),mang,nang,
      + int_mb(i_dih),mdih,ndih,int_mb(i_imp),mimp,nimp))
-     + call errquit('pre_wrtsgm failed',9999)
+     + call errquit('mksgm: pre_wrtsgm failed',9999)
 c
 c     deallocate memory
 c     -----------------
 c
       if(.not.ma_pop_stack(l_imp))
-     + call errquit('Memory deallocation failed for imp',9999)
+     + call errquit('mksgm: Memory deallocation failed for imp',9999)
       if(.not.ma_pop_stack(l_dih))
-     + call errquit('Memory deallocation failed for dih',9999)
+     + call errquit('mksgm: Memory deallocation failed for dih',9999)
       if(.not.ma_pop_stack(l_ang))
-     + call errquit('Memory deallocation failed for ang',9999)
+     + call errquit('mksgm: Memory deallocation failed for ang',9999)
       if(.not.ma_pop_stack(l_bnd))
-     + call errquit('Memory deallocation failed for bnd',9999)
+     + call errquit('mksgm: Memory deallocation failed for bnd',9999)
       if(.not.ma_pop_stack(l_qatm))
-     + call errquit('Memory deallocation failed for qatm',9999)
+     + call errquit('mksgm: Memory deallocation failed for qatm',9999)
       if(.not.ma_pop_stack(l_catm))
-     + call errquit('Memory deallocation failed for catm',9999)
+     + call errquit('mksgm: Memory deallocation failed for catm',9999)
       if(.not.ma_pop_stack(l_latm))
-     + call errquit('Memory deallocation failed for latm',9999)
+     + call errquit('mksgm: Memory deallocation failed for latm',9999)
 c
       pre_mksgm=.true.
       return
