@@ -72,3 +72,5 @@ Aug 07 1998	 Initilization bug fix in pre_misfit
 Aug 07 1998	 Initilization bug fix in pre_short
 Aug 10 1998	 Add missing initialization angle constraints
 Aug 13 1998	 Add POx in charge determination
+Aug 18 1998	 Repair memory leak in pre_charge
+		 Initialization bug fix in pre_mklist
